# Office365-REST-Python-Client-town

./: .editorconfig  .gitignore  .travis.yml  README-dev.md  README.md  Rest API.java  SharePoint REST API.cs  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
generator/: generate_model.py
tests/search/: test_search.py
