[metadata]
name = office365-rest-python-client
version = 2.3.0
author = Vitaly Grebnev
author_email = vgrem.mail@gmail.com
description = Office 365 & Microsoft Graph API made easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vgrem/Office365-REST-Python-Client
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    requests>=2.0.0
    six>=1.10.0
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4

[options.extras_require]
dev =
    flake8
    sphinx
    pytest

[options.packages.find]
exclude =
    tests
    docs
